# vrt1-verifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_adversarial.py  test_btc_client.py  test_cli.py  test_nostr_client.py
vrt1_verifier/: btc_client.py  cli.py  nostr_client.py
