[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrt1-verifier"
version = "0.1.0"
description = "Third-party verifier for VERITAS (VRT1) Bitcoin-anchored AI attestations. Fetches artifacts from public Nostr relays and Bitcoin block explorers, runs verification, prints a binding-chain report."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ifasola34"},
]
keywords = ["bitcoin", "nostr", "attestation", "veritas", "verifier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]
dependencies = [
    "veritas @ git+https://github.com/Ifasola34/veritas.git",
    "click>=8.0",
    "rich>=13.0",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
vrt1-verify = "vrt1_verifier.cli:main"

[project.urls]
Repository = "https://github.com/Ifasola34/vrt1-verifier"
"VERITAS Protocol" = "https://github.com/Ifasola34/veritas"

[tool.pytest.ini_options]
testpaths = ["tests"]
